Fixing header bugs on IE (tfs : 23697)
Updates:
[Edward] Including ie9.scss that is used on non-responsive page. Comment out background image inside ie9.scss. Still need Siamak to make additional changes.

[Siamak] Fixed Footer width and Wrapper BG color

Test URL : http://stage-quest-com/landing/6503/

--- a/static/bootstrap/custom/quest/_custom-header-footer-sm-quest.scss
+++ b/static/bootstrap/custom/quest/_custom-header-footer-sm-quest.scss
@@ -305,6 +305,7 @@
 				padding: 0 15px 20px;
 				color: $footer-link-color;
 				border-bottom: 1px solid #eee;
+				width: 1200px;
 				li {
 					border-bottom: 0;
 
@@ -314,7 +315,7 @@
 				}
 				> li {
 					/*width: 20%;*/
-					padding-right: 6%;
+					padding-right: 9%;
 					display: inline-block;
 					vertical-align: top;
 					float: left;
